@@ -101,12 +101,6 @@
 #ifndef cpu_has_vtag_icache
 #define cpu_has_vtag_icache	(cpu_data[0].icache.flags & MIPS_CACHE_VTAG)
 #endif
-#ifndef cpu_has_vtag_dcache
-#define cpu_has_vtag_dcache	(cpu_data[0].dcache.flags & MIPS_CACHE_VTAG)
-#endif
-#ifndef cpu_has_ic_aliases
-#define cpu_has_ic_aliases	(cpu_data[0].icache.flags & MIPS_CACHE_ALIASES)
-#endif
 #ifndef cpu_has_dc_aliases
 #define cpu_has_dc_aliases	(cpu_data[0].dcache.flags & MIPS_CACHE_ALIASES)
 #endif
