@@ -46,21 +46,7 @@
  * fix-mapped?
  */
 enum fixed_addresses {
-
-/*
- * Must be <=8 but, last_pkmap_nr_arr[] is still initialized to
- * 8 elements. Keep the total L1 size <= 512KB with 4-ways.
- */
-#ifdef  CONFIG_PAGE_SIZE_64KB
-#define FIX_N_COLOURS 2
-#endif
-#ifdef  CONFIG_PAGE_SIZE_32KB
-#define FIX_N_COLOURS 4
-#endif
-#ifndef FIX_N_COLOURS
 #define FIX_N_COLOURS 8
-#endif
-
 	FIX_CMAP_BEGIN,
 #ifdef CONFIG_MIPS_MT_SMTC
 	FIX_CMAP_END = FIX_CMAP_BEGIN + (FIX_N_COLOURS * NR_CPUS * 2),
@@ -70,7 +56,7 @@ enum fixed_addresses {
 #ifdef CONFIG_HIGHMEM
 	/* reserved pte's for temporary kernel mappings */
 	FIX_KMAP_BEGIN = FIX_CMAP_END + 1,
-	FIX_KMAP_END = FIX_KMAP_BEGIN+(8*NR_CPUS*FIX_N_COLOURS)-1,
+	FIX_KMAP_END = FIX_KMAP_BEGIN+(KM_TYPE_NR*NR_CPUS)-1,
 #endif
 	__end_of_fixed_addresses
 };
