@@ -37,37 +37,10 @@ extern pte_t *pkmap_page_table;
  * easily, subsequent pte tables have to be allocated in one physical
  * chunk of RAM.
  */
-
-/*  8 colors pages are here */
-#ifdef  CONFIG_PAGE_SIZE_4KB
-#define LAST_PKMAP 4096
-#endif
-#ifdef  CONFIG_PAGE_SIZE_8KB
-#define LAST_PKMAP 2048
-#endif
-#ifdef  CONFIG_PAGE_SIZE_16KB
 #define LAST_PKMAP 1024
-#endif
-
-/* 32KB and 64KB pages should have 4 and 2 colors to keep space under control */
-#ifndef LAST_PKMAP
-#define LAST_PKMAP 1024
-#endif
-
 #define LAST_PKMAP_MASK (LAST_PKMAP-1)
 #define PKMAP_NR(virt)  ((virt-PKMAP_BASE) >> PAGE_SHIFT)
 #define PKMAP_ADDR(nr)  (PKMAP_BASE + ((nr) << PAGE_SHIFT))
-
-#define ARCH_PKMAP_COLORING             1
-#define     set_pkmap_color(pg,cl)      { cl = ((unsigned long)lowmem_page_address(pg) \
-					   >> PAGE_SHIFT) & (FIX_N_COLOURS-1); }
-#define     get_last_pkmap_nr(p,cl)     (last_pkmap_nr_arr[cl])
-#define     get_next_pkmap_nr(p,cl)     (last_pkmap_nr_arr[cl] = \
-					    ((p + FIX_N_COLOURS) & LAST_PKMAP_MASK))
-#define     is_no_more_pkmaps(p,cl)     (p < FIX_N_COLOURS)
-#define     get_next_pkmap_counter(c,cl)    (c - FIX_N_COLOURS)
-extern unsigned int     last_pkmap_nr_arr[];
-
 
 extern void * kmap_high(struct page *page);
 extern void kunmap_high(struct page *page);
