@@ -597,8 +597,7 @@
 #define MIPS_CONF4_MMUEXTDEF_MMUSIZEEXT (_ULCAST_(1) << 14)
 
 #define MIPS_CONF7_WII		(_ULCAST_(1) << 31)
-#define MIPS_CONF7_AR		(_ULCAST_(1) << 16)
-#define MIPS_CONF7_IAR		(_ULCAST_(1) << 10)
+
 #define MIPS_CONF7_RPS		(_ULCAST_(1) << 2)
 
 
