@@ -73,16 +73,13 @@ static inline unsigned long pages_do_alias(unsigned long addr1,
 
 struct page;
 
-#include <asm/cpu-features.h>
-
 static inline void clear_user_page(void *addr, unsigned long vaddr,
 	struct page *page)
 {
 	extern void (*flush_data_cache_page)(unsigned long addr);
 
 	clear_page(addr);
-	if (cpu_has_vtag_dcache || (cpu_has_dc_aliases &&
-	     pages_do_alias((unsigned long) addr, vaddr & PAGE_MASK)))
+	if (pages_do_alias((unsigned long) addr, vaddr & PAGE_MASK))
 		flush_data_cache_page((unsigned long)addr);
 }
 
