@@ -400,11 +400,8 @@ static inline void local_r4k_flush_cache_range(void * args)
 		return;
 
 	r4k_blast_dcache();
-	if (exec) {
-		if (!cpu_has_ic_fills_f_dc)
-			wmb();
+	if (exec)
 		r4k_blast_icache();
-	}
 }
 
 static void r4k_flush_cache_range(struct vm_area_struct *vma,
@@ -468,7 +465,6 @@ static inline void local_r4k_flush_cache_page(void *args)
 	pmd_t *pmdp;
 	pte_t *ptep;
 	void *vaddr;
-	int noflush = 0;
 
 	/*
 	 * If ownes no valid ASID yet, cannot possibly have gotten
@@ -490,14 +486,6 @@ static inline void local_r4k_flush_cache_page(void *args)
 	if (!(pte_present(*ptep)))
 		return;
 
-	/*
-	 * If this page is not destined to be executable and the
-	 * data cache does not have aliases, all of the mapping
-	 * below can be skipped.
-	 */
-	if (!exec && !cpu_has_dc_aliases)
-		return;
-
 	if ((mm == current->active_mm) && (pte_val(*ptep) & _PAGE_VALID))
 		vaddr = NULL;
 	else {
@@ -516,8 +504,6 @@ static inline void local_r4k_flush_cache_page(void *args)
 
 	if (cpu_has_dc_aliases || (exec && !cpu_has_ic_fills_f_dc)) {
 		r4k_blast_dcache_page(addr);
-		if (exec && !cpu_has_ic_fills_f_dc)
-			wmb();
 		if (exec && !cpu_icache_snoops_remote_store)
 			r4k_blast_scache_page(addr);
 	}
@@ -527,10 +513,8 @@ static inline void local_r4k_flush_cache_page(void *args)
 
 			if (cpu_context(cpu, mm) != 0)
 				drop_mmu_context(mm, cpu);
-			noflush = 1;
 		} else
-			if (map_coherent || !cpu_has_ic_aliases)
-				r4k_blast_icache_page(addr);
+			r4k_blast_icache_page(addr);
 	}
 
 	if (vaddr) {
@@ -538,13 +522,6 @@ static inline void local_r4k_flush_cache_page(void *args)
 			kunmap_coherent();
 		else
 			kunmap_atomic(vaddr);
-	}
-
-	/*  If we have I-cache aliasing, then blast it via coherent page. */
-	if (exec && cpu_has_ic_aliases && !noflush && !map_coherent) {
-		vaddr = kmap_coherent(page, addr);
-		r4k_blast_icache_page((unsigned long)vaddr);
-		kunmap_coherent();
 	}
 }
 
@@ -558,8 +535,6 @@ static void r4k_flush_cache_page(struct vm_area_struct *vma,
 	args.pfn = pfn;
 
 	r4k_on_each_cpu(local_r4k_flush_cache_page, &args);
-	if (cpu_has_dc_aliases)
-		ClearPageDcacheDirty(pfn_to_page(pfn));
 }
 
 static inline void local_r4k_flush_data_cache_page(void * addr)
@@ -590,8 +565,6 @@ static inline void local_r4k_flush_icache_range(unsigned long start, unsigned lo
 			protected_blast_dcache_range(start, end);
 		}
 	}
-
-	wmb();
 
 	if (end - start > icache_size)
 		r4k_blast_icache();
@@ -1072,11 +1045,7 @@ static void __cpuinit probe_pcache(void)
 	case CPU_34K:
 	case CPU_74K:
 	case CPU_1004K:
-		if (!(read_c0_config7() & MIPS_CONF7_IAR)) {
-			if (c->icache.waysize > PAGE_SIZE)
-				c->icache.flags |= MIPS_CACHE_ALIASES;
-		}
-		if (read_c0_config7() & MIPS_CONF7_AR) {
+		if ((read_c0_config7() & (1 << 16))) {
 			/* effectively physically indexed dcache,
 			   thus no virtual aliases. */
 			c->dcache.flags |= MIPS_CACHE_PINDEX;
@@ -1086,14 +1055,6 @@ static void __cpuinit probe_pcache(void)
 		if (c->dcache.waysize > PAGE_SIZE)
 			c->dcache.flags |= MIPS_CACHE_ALIASES;
 	}
-
-#ifdef  CONFIG_HIGHMEM
-	if (((c->dcache.flags & MIPS_CACHE_ALIASES) &&
-	     ((c->dcache.waysize / PAGE_SIZE) > FIX_N_COLOURS)) ||
-	     ((c->icache.flags & MIPS_CACHE_ALIASES) &&
-	     ((c->icache.waysize / PAGE_SIZE) > FIX_N_COLOURS)))
-	        panic("PAGE_SIZE*WAYS too small for L1 size, too many colors");
-#endif
 
 	switch (c->cputype) {
 	case CPU_20KC:
@@ -1117,12 +1078,10 @@ static void __cpuinit probe_pcache(void)
 	c->icache.ways = 1;
 #endif
 
-	printk("Primary instruction cache %ldkB, %s, %s, %slinesize %d bytes.\n",
-	       icache_size >> 10, way_string[c->icache.ways],
+	printk("Primary instruction cache %ldkB, %s, %s, linesize %d bytes.\n",
+	       icache_size >> 10,
 	       c->icache.flags & MIPS_CACHE_VTAG ? "VIVT" : "VIPT",
-	       (c->icache.flags & MIPS_CACHE_ALIASES) ?
-			"I-cache aliases, " : "",
-	       c->icache.linesz);
+	       way_string[c->icache.ways], c->icache.linesz);
 
 	printk("Primary data cache %ldkB, %s, %s, %s, linesize %d bytes\n",
 	       dcache_size >> 10, way_string[c->dcache.ways],
