@@ -44,14 +44,6 @@ DEFINE_PER_CPU(int, __kmap_atomic_idx);
  */
 #ifdef CONFIG_HIGHMEM
 
-#ifndef ARCH_PKMAP_COLORING
-#define     set_pkmap_color(pg,cl)          /* */
-#define     get_last_pkmap_nr(p,cl)         (p)
-#define     get_next_pkmap_nr(p,cl)         ((p + 1) & LAST_PKMAP_MASK)
-#define     is_no_more_pkmaps(p,cl)         (!p)
-#define     get_next_pkmap_counter(c,cl)    (c - 1)
-#endif
-
 unsigned long totalhigh_pages __read_mostly;
 EXPORT_SYMBOL(totalhigh_pages);
 
@@ -170,24 +162,19 @@ static inline unsigned long map_new_virtual(struct page *page)
 {
 	unsigned long vaddr;
 	int count;
-	int color;
-
-	set_pkmap_color(page,color);
-	last_pkmap_nr = get_last_pkmap_nr(last_pkmap_nr,color);
 
 start:
 	count = LAST_PKMAP;
 	/* Find an empty entry */
 	for (;;) {
-		last_pkmap_nr = get_next_pkmap_nr(last_pkmap_nr,color);
-		if (is_no_more_pkmaps(last_pkmap_nr,color)) {
+		last_pkmap_nr = (last_pkmap_nr + 1) & LAST_PKMAP_MASK;
+		if (!last_pkmap_nr) {
 			flush_all_zero_pkmaps();
 			count = LAST_PKMAP;
 		}
 		if (!pkmap_count[last_pkmap_nr])
 			break;	/* Found a usable entry */
-		count = get_next_pkmap_counter(count,color);
-		if (count > 0)
+		if (--count)
 			continue;
 
 		/*
