@@ -1478,8 +1478,9 @@
 3) xl2tpd: sync with devel tree 26 Nov 2015.<br>
 4) kernel: mips: fix highmem crash in __update_cache.<br>
 5) kernel: mips: revert make CAC_ADDR and UNCAC_ADDR account for PHYS_OFFSET.<br>
-6) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
-7) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
+6) kernel: mips: revert HIGHMEM fixes for cache aliasing and non-DMA I/O.<br>
+7) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
+8) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
 <br>
 <br>
 <b>TODO:</b><br>
